--- a/educa/.pre-commit-config.yaml
+++ b/educa/.pre-commit-config.yaml
@@ -18,3 +18,7 @@ repos:
     hooks:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.2
+    hooks:
+      - id: ruff
