--- a/educa/.pre-commit-config.yaml
+++ b/educa/.pre-commit-config.yaml
@@ -9,6 +9,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.11.2
+    hooks:
+      - id: ruff
+        args: [--fix]
   - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
@@ -18,7 +23,3 @@ repos:
     hooks:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.11.2
-    hooks:
-      - id: ruff
